fixed issues with nav and footer, page stretching not working properly

--- a/src/App.css
+++ b/src/App.css
@@ -13,20 +13,20 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   display: block;
 }
 
-body {
+.content {
   line-height: 1;
   background-color: #f2f0ef;
-  font-family: Arial, Helvetica, "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   margin: 0;
   padding: 3rem auto;
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  min-height: 84vh;
   justify-content: center;
 }
 
 * {
   box-sizing: border-box;
+  font-family: Arial, Helvetica, "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 /* Navbar & Footer */
@@ -41,7 +41,7 @@ nav {
   top: 0;
   width: 100%;
   z-index: 1000;
-  margin-bottom: 2rem;
+  min-height: 8vh;
 }
 
 nav a {
@@ -69,10 +69,11 @@ nav a.active {
   bottom: 0;
   width: 100%;
   z-index: 1000;
-  margin-top: 2rem;
   display: flex;
   align-items: center;
   justify-content: center;
+  min-height: 8vh;
+  overflow: hidden;
 }
 
 .footContainer a {
@@ -95,6 +96,7 @@ nav a.active {
   display: flex;
   flex-flow: column wrap;
   flex: 1 1 auto;
+  margin-top: 1rem;
 }
 
 .itemsList {
@@ -248,6 +250,25 @@ nav a.active {
   flex-flow: column wrap;
   max-width: 50vw;
   margin: 0 25vw;
+  border: 1px solid #ddd;
+  background-color: white;
+  padding: 1.5rem;
+  border-radius: 1rem;
+}
+
+.commentForm {
+  margin: 0.5rem 0;
+}
+
+.commentForm form {
+  display: flex;
+  flex-flow: column wrap;
+  align-content: center;
+  gap: 0.4rem;
+}
+
+article {
+  
 }
 
 /* Forms */
@@ -268,6 +289,7 @@ nav a.active {
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
+  justify-content: center;
   flex: 1 1 auto;
 }
 
@@ -313,7 +335,7 @@ button:hover {
   color: black;
 }
 
-/* Homepage */
+/* Stretch Page */
 .HomepageSection, .ContactSection, .AboutSection {
   display: flex;
   flex-flow: column nowrap;
@@ -335,4 +357,5 @@ h2 {
 h3 {
   font-size: 24px;
   line-height: 40px;
+  text-align: center;
 }
